Fixing composer column remove button z-index issues

--- a/src/external/styles/components/_builder.scss
+++ b/src/external/styles/components/_builder.scss
@@ -111,6 +111,7 @@ $minRowHeight: 60px;
           left: auto;
           right: 8px;
           top: 12px;
+          z-index: 2;
         }
 
         &, & * {
